# experiments

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  go.mod  go.sum
algorithms/leetcode/: README.md  count.sh
algorithms/lock-free-data-structures/: commands.sh
algorithms/lock-free-hashtable/: README.md
basic_bench/: fib.go  fib_test.go
basic_bench/profile/: main.go
benchmarks/: README.md
benchmarks/basic_bench/: fib.go  fib_test.go  prof.sh
benchmarks/concurrency/: bench.sh  generator_efficiency.go  or_channel.go
benchmarks/gprof/: README.md  commands.sh  example1.cpp
benchmarks/marshal_bench/: marshal_test.go
blackmagic/: README.md
blackmagic/ascii-art-generator/: README.md
blackmagic/base64/: commands.sh
blackmagic/bat/: README.md  commands.bat
blackmagic/browser/: commands.sh
blackmagic/change-git-author/: commands.sh
blackmagic/cors/: commands.sh
blackmagic/create-large-empty-file/: .gitignore  README.md  commands.sh
blackmagic/curl/: commands.sh
blackmagic/date/: commands.sh
blackmagic/docker-host-internal/: commands.sh
blackmagic/get-recent-experiments/: commands.sh
blackmagic/git/: commands.sh
blackmagic/http.server/: commands.sh
blackmagic/kind/: commands.sh  kind-config.yaml
blackmagic/kubectl-port-forward-80/: commands.sh
blackmagic/matplotlib/: font.ipynb
blackmagic/merge-files/: merge.sh  new_file  old_file2
blackmagic/mktemp/: mktemp.sh
blackmagic/oidc/: README.md  commands.sh
blackmagic/openssl/: commands.sh
blackmagic/prompts/: en-to-zh-translator.md  finance-advisor.md  fullstack-software-developer.md  native-speaker.md
blackmagic/rsync/: commands.sh
blackmagic/shell-ask/: commands.sh
blackmagic/ssl/: README.md  commands.sh
blackmagic/tar/: commands.sh
blackmagic/wsl2/: commands.sh
blackmagic/yaml-anchor/: load.py  services.yaml
cleancode/: README.md
cleancode/click-complex-cli/: 1-pass-obj.py  2-complex-pass-ctx.py  README.md  commands.sh
cleancode/explicit-def-instance-attr/: experiment.py
cleancode/forward-backward-compatibility/: README.md
cleancode/git-lfs/: commands.sh
cleancode/jsonargparse/: 1-parser.py  1-parser.yaml  2-nested.py  2-nested.yaml  3-default-file.py  3-default-file.yaml  3-docstring.py  4-attribute-docstring.py  999-docstring.yaml  README.md  commands.sh
cleancode/prettyprint/: python.py
cleancode/pydantic/: README.md  commands.sh  parse_obj.py  parse_obj_from_file.py  parse_obj_from_file.yaml
cleancode/pydantic-settings/: 1-settings.py  2-dot-env.py  commands.sh
cleancode/python-shell-interaction/: logging-thread.py  popen.py
cloud/: README.md
cloud/aws_cdk/: README.md  commands.sh
cloud/aws_ecr/: README.md
cloud/aws_lambda/: README.md  alert_to_feishu.py  lambda.py  main.tf  shutdown.py
cloud/aws_spot/: main.tf
cloud/bitnami/: README.md  commands.sh  mysql.yaml  redis.yaml
cloud/dex/: README.md  commands.sh
cloud/discussions/: db-in-k8s-or-not.md
cloud/etcd/: commands.sh
cloud/fluentd/: README.md
cloud/fluid/: README.md  app.yaml  commands.sh  dataset.yaml  runtime.yaml
cloud/grafana/: README.md  commands.sh  grafana-sidecar.yaml  grafana.yaml
cloud/harbor/: README.md  commands.sh
cloud/helm/: .env.example  README.md  build.sh  commands.sh  escape-go-template-syntax.yaml  spinner-helm.yaml
cloud/istio/: README.md  commands.sh
cloud/jupyterhub/: .gitignore  README.md  commands.sh
cloud/k8s/: commands.sh
cloud/kaniko/: .gitignore  commands.sh  config-example.json  debug-builder.yaml
cloud/knative/: .gitignore  README.md  commands.sh
cloud/kserve/: .gitignore  README.md  commands.sh  istio-minimal-operator.yaml  (+1 more)
concurrency/: README.md  book_takeaway.md  generator_efficiency.go  generator_efficiency_test.go  or_channel_test.go
config/: ideavimrc  keybindings.json  leetcodeplugin  settings.json  vimium_c-20230517_142809.json  vimium_c-20230517_142809.json:Zone.Identifier
desktop/: README.md
docs/: learn_k8s_operator.md  pratical_deep_learning.md  software_engineering_9th_note.md  structual_design_introduction.md  testing_distributed_systems.md
escape_analysis/: README.md  bench.sh  main.go  return_by_value_test.go
gpt/: README.md
iterator-thread-safe/: hello  hello.asm
jaeger/: tracing.py
k8s_go_client/: Dockerfile  main.go
kafka/: README.md  main.go
language/: README.md
language/cpp/cmake/crow_http_server/: CMakeLists.txt  commands.sh
language/cpp/cmake/crow_http_server/src/: main.cpp
language/cpp/cmake/http_server_client/: CMakeLists.txt  commands.sh
language/cpp/cmake/http_server_client/client/: main.cpp
language/cpp/cmake/http_server_client/server/: main.cpp
language/cpp/cmake/leakage_detector/lsan/: CMakeLists.txt
language/cpp/cmake/my_curl/: CMakeLists.txt  commands.sh
language/cpp/cmake/my_curl/callback/: CMakeLists.txt  callback.cpp  callback.h
language/cpp/cmake/my_curl/src/: CMakeLists.txt  callback.cpp  callback.h  main.cpp
language/cpp/cmake/my_curl/tests/: CMakeLists.txt  callback_test.cpp
language/cpp/cmake/my_curl_vcpkg/: CMakeLists.txt  commands.sh  vcpkg.json
language/cpp/cmake/my_curl_vcpkg/tests/: CMakeLists.txt  callback_test.cpp
language/cpp/leakage_detector/asan/: CMakeLists.txt  main.cpp
language/cpp/perf/google-perftools/: CMakeLists.txt  commands.sh  main.cpp
language/llvm/calculator/: CMakeLists.txt  commands.sh
language/llvm/calculator/src/: Compiler.cpp  Compiler.h  Expr.cpp  Expr.h  Parser.cpp  Parser.h  main.cpp
marshal_bench/: README.md  bench.sh
microservices/: README.md
ml/: README.md
monorepo/: README.md
scripts/: deps.sh
snippets/: forever_pending.yaml  istio-spinner-nginx.yaml  istio-spinner.yaml  kubectl_jq.yaml  kubeflow-operator-debug-worker-0.yaml  kubeflow-operator-debug-worker-1.yaml  mysql-tester.yaml  network-tester.yaml  python-deployment.yaml  redis-tester.yaml  request-visualzier.yaml  spinner-with-hostpath.yaml  spinner.yaml  spinner_cant_start.yaml  very_big_image.yaml
utils/: aws_eks_static_kubeconfig.sh  color.sh  deps.sh  k8s.go  merge_yaml.py  string.go
vault/: README.md  main.go
(+1766 files in other folders)
